Revert "stretch fix"
This reverts commit d86b0d794a0a6a2d679b422d4aa0a51b06e769a0.

--- a/flexbox.styl
+++ b/flexbox.styl
@@ -53,10 +53,10 @@ for v in row column
       flex-direction v + -reverse
 
 .row.stretch
-  min-width 100%
+  width 100%
 
 .column.stretch
-  min-height 100%
+  height 100%
 
   &.padded
     height calc(100% - 28px)
